@@ -9,8 +9,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Stream;
@@ -21,9 +21,9 @@ public class FuseConfigImplTest {
 	@ParameterizedTest(name = "{1}")
 	@MethodSource
 	public void testGetters(SetInMemorySegment<Number> setter, GetInFuseConfig<Number> getter, Number value) {
-		try (var scope = MemorySession.openConfined()) {
-			var segment = fuse3_config.allocate(scope);
-			var fuseConfig = new FuseConfigImpl(segment.address(), scope);
+		try (var arena = Arena.openConfined()) {
+			var segment = fuse3_config.allocate(arena);
+			var fuseConfig = new FuseConfigImpl(segment, arena.scope());
 
 			setter.accept(segment, value);
 
